--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -16,8 +16,9 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@shopify/react-native-skia": "^2.4.14",
     "@supabase/supabase-js": "^2.89.0",
-    "expo": "~54.0.30",
+    "expo": "~54.0.31",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
@@ -37,6 +38,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
